# Glutenix

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  demo.html  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  cleanup.yml  implementation-task.yml  parent-plan.yml
.github/workflows/: test.yml
.opencode/agent/: issue-manager.md
data/literature/: README.md  sources.json  (+2 more)
docs/: application-targets-research.md  application-workflow.md  bread-baking-calibration-report.md  classification.md  demo-narrative.md  development-workflow.md  digital-campaigns.md  evidence-map.md  flavor-heuristic-model.md  literature-coverage-ood.md  literature-extraction-template.md  literature-first-validation-roadmap.md  literature-triage.md  massive-validation-benchmark.md  ml-residual-benchmark.md  pasta-cooking-calibration-report.md  pasta-v1-workflow.md  pizza-v1-literature-audit.md  pizza-v1-workflow.md  review-cleanup-audit.md  target-profile-calibration.md
frontend/: package-lock.json  package.json  vite.config.js
glutenix/: cli.py  config.py  logging.py
scripts/: benchmark_residual_models.py  generate_bibliography.py  generate_evidence_summary.py  run_digital_campaigns.py  update_calibration_reports.py  validate_doc_counts.py
tests/: conftest.py  test_api.py  test_application_workflow.py  test_bo.py  test_calibration.py  test_campaigns.py  test_cli.py  test_confidence.py  test_docs_automation.py  test_engine.py  test_flavor.py  test_gpr.py  test_models.py  test_pizza_v1.py  test_report_generation.py  test_residual.py  test_sweep.py
(+63 files in other folders)
