[project]
name = "glutenix"
version = "0.1.0"
description = "Simulatore e ottimizzatore di mix di farine senza glutine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "numpy>=2.0",
    "scipy>=1.15",
    "gpytorch>=1.13",
    "torch>=2.0",
    "botorch>=0.18.1",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "structlog>=24.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8",
    "pytest-cov>=6",
]

[tool.setuptools.packages.find]
include = ["glutenix*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
